--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 						<p>During my free time some hobbies I enjoy are snowboarding, reading-up on new technologies,</p>
 						<p>accomplshing coding challenges (fav: Google Games), attending hackathons (my favorite so far is</p> 
 						<p>Facebook's Hackathon), and connecting with extraodinary and outstanding people.</p>
-						<p>Below is my past relevant experience</p>
+						<p>Below is my past relevant experience.</p>
 					</header>
 					<div class="container">
 						<div class="row">
