--- a/index.html
+++ b/index.html
@@ -47,12 +47,14 @@
 						<div class="8u">
 							<header>
 								<h1><strong>William Thing</strong></h1>
+
+								<p>Hello World!!! My name is William Thing; aspiring Software Engineer. I am currently a senior.</p>
 							</header>
 								<script>
 									$(function(){
 										$(".typingfont").typed({
 										strings: ["Hello  World!!! My name is William Thing; aspiring Software Engineer. I am currently a senior Electrical Engineering student at the University of Washington studying Software Engineering and Embedded Computer Systems. Welcome to my website!!!"],
-										typeSpeed: 1
+										typeSpeed: 3
 										});
 										});
 								</script>
