--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						</div>
 						<div class="8u">
 							<header>
-								<h1><strong>William Thing</strong></h1>
+								<h1><strong>Hi, I'm <b>William Thing</b></strong></h1>
 
 								<p>Hello World!!! My name is William Thing; aspiring Software Engineer. I am currently a senior.</p>
 							</header>
