--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 						</div>
 						<div class="8u">
 							<header>
-								<h1><strong>Hi, I'm <b>William Thing</b></strong></h1>
+								<h1>Hi, I'm <strong>William Thing</strong></h1>
 
-								<p>Hello World!!! My name is William Thing; aspiring Software Engineer. I am currently a senior.</p>
+								<p>Hello World!!! My name is William Thing; aspiring Software Engineer.</p>
 							</header>
 								<script>
 									$(function(){
 										$(".typingfont").typed({
-										strings: ["Hello  World!!! My name is William Thing; aspiring Software Engineer. I am currently a senior Electrical Engineering student at the University of Washington studying Software Engineering and Embedded Computer Systems. Welcome to my website!!!"],
+										strings: ["I am currently a senior Electrical Engineering student at the University of Washington studying Software Engineering and Embedded Computer Systems. Welcome to my website!!!"],
 										typeSpeed: 3
 										});
 										});
