--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<header>
 								<h1>Hi, I'm <strong>William Thing</strong></h1>
 
-								<p>Hello World!!! My name is William Thing; aspiring Software Engineer.</p>
+								<p>Aspiring Software Engineer</p>
 							</header>
 								<script>
 									$(function(){
