--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 							<div class="4u">
 								<section class="box style1">
 									<!-- <span class="icon featured fa-thumbs-o-up"></span> -->
-									<h3>Embedded Software Developer</h3>
+									<h3>Embedded Systems Engineer</h3>
 									<p>@ University of Washington EcoCar3 Electrical Team</p>
 									<p>Programmed software in C for the embedded computing systems of our car's charging management system through legacy design of O2C2.</p>
 								</section>
