--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 							<header>
 								<h1>Hi, I'm <strong>William Thing</strong></h1>
 
-								<p>Aspiring Software Engineer</p>
+								<p>Aspiring Software Engineer. I am currently a senior Electrical Engineering student at the University of Washington studying Software Engineering and Embedded Computer Systems.</p>
 							</header>
 								<script>
 									$(function(){
 										$(".typingfont").typed({
-										strings: ["I am currently a senior Electrical Engineering student at the University of Washington studying Software Engineering and Embedded Computer Systems. Welcome to my website!!!"],
+										strings: ["Welcome to my website!!!"],
 										typeSpeed: 3
 										});
 										});
