--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								<script>
 									$(function(){
 										$(".typingfont").typed({
-										strings: ["Welcome to my website! Lets build something fun together!!"],
+										strings: ["Welcome to my website! Lets build something fun together!! ☺"],
 										typeSpeed: 40
 										});
 										});
