--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<span class="typingfont"></span>
 
 							<header>
-								<h2> TESTING .... </h1>
+								<h2> Welcome to my website! Lets build something fun together!! ☺</h1>
 							</header>
 							<!-- <p> Aspiring Software Engineer </p> -->
 							<!-- <p> I am a senior Electrical Engineering student at the University of Washington, concentrating in software engineering and embedded computer systems. Feel free to explore my other projects and interest on my <a href="http://github.com/williamthing">github</a>.</p> -->
