--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
 							
 								<span class="typingfont"></span>
 
-							<header>
+							<!-- might re-add to site -->
+							<!-- <header>
 								<h2> Welcome to my website! Lets build something fun together!! ☺</h1>
-							</header>
+							</header> -->
 							<!-- <p> Aspiring Software Engineer </p> -->
 							<!-- <p> I am a senior Electrical Engineering student at the University of Washington, concentrating in software engineering and embedded computer systems. Feel free to explore my other projects and interest on my <a href="http://github.com/williamthing">github</a>.</p> -->
 							<!-- <a href="#work" class="button big scrolly">Learn about what I do</a> -->
