--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									$(function(){
 										$(".typingfont").typed({
 										strings: ["Welcome to my website! Lets build something fun together!! ☺"],
-										typeSpeed: 20
+										typeSpeed: 10
 										});
 										});
 								</script>
@@ -78,7 +78,7 @@
 				<article id="work">
 					<header>
 						<h2>About Me</h2>
-						<p>I am an engineer that is passionate in creating software and hardware that will help people</p> 
+						<p>I am an engineer that is passionate about creating software and hardware that will help people</p> 
 						<p>all over the globe. I am a self-starting go-getter always thinking of new apps and project ideas.</p>
 						<p>During my free time some hobbies I enjoy are snowboarding, reading-up on new technologies,</p>
 						<p>accomplshing coding challenges (fav: Google Games), attending hackathons (my favorite so far is</p> 
@@ -92,7 +92,7 @@
 									<!-- <span class="icon featured fa-comments-o"></span> -->
 									<h3>Computer Science Tutor</h3>
 									<p>@ University of Washington Instructional Center</p>
-									<p>Coached students in a one-on-one environment to help with coding fundamentals in Java. Help students understand basic Object-Oriented design.</p>
+									<p>Currently coaching students in a one-on-one environment to help with coding fundamentals in Java. Help students understand basic Object-Oriented design.</p>
 								</section>
 							</div>
 							<div class="4u">
@@ -143,7 +143,7 @@
 								<article class="box style2">
 									<a href="https://github.com/williamthing/Memory-Management-System" target=="_blank" class="image featured"><img src="images/memory.jpg" alt="" /></a>
 									<h3><a href="https://github.com/williamthing/Memory-Management-System" target=="_blank">Memory Manager</a></h3>
-									<p>Software that manages memory allocation. Handles the request of memory allocation, fusing, and division of memory blocks within a threshold; reducing computation cost.</p>
+									<p>Software that manages memory allocation. Handles the request of memory allocation and combination/division of memory blocks within a threshold; reducing computation cost.</p>
 									<p>Technologies used: C, Linux</p>
 									<br><br>
 									<br><br>
