--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
 		<script src="js/typed.js"></script>
+		<script>
+  		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  		ga('create', 'UA-61679742-1', 'auto');
+  		ga('send', 'pageview');
+
+		</script>
 		<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
@@ -54,7 +63,7 @@
 									$(function(){
 										$(".typingfont").typed({
 										strings: ["Welcome to my website! Lets build something fun together!! ☺"],
-										typeSpeed: 10
+										typeSpeed: 14
 										});
 										});
 								</script>
@@ -143,7 +152,7 @@
 								<article class="box style2">
 									<a href="https://github.com/williamthing/Memory-Management-System" target=="_blank" class="image featured"><img src="images/memory.jpg" alt="" /></a>
 									<h3><a href="https://github.com/williamthing/Memory-Management-System" target=="_blank">Memory Manager</a></h3>
-									<p>Software that manages memory allocation. Handles the request of memory allocation and combination/division of memory blocks within a threshold; reducing computation cost.</p>
+									<p>Malloc Implementation. Handles the request of memory allocation and arrangements of memory blocks within a threshold; reducing computation cost.</p>
 									<p>Technologies used: C, Linux</p>
 									<br><br>
 									<br><br>
@@ -191,9 +200,9 @@
 								<article class="box style2">
 									<a href="https://github.com/williamthing/One-Hack-Away" target="_blank" class="image featured"><img src="images/webapp.jpg" alt="" /></a>
 									<h3><a href="https://github.com/williamthing/One-Hack-Away" target="_blank">One Hack Away</a></h3>
-									<p>Messenger Web Application for Hackathons. Provides real-time chatting system, colloborative utilities, and toolkits that will allow hackthonees to team up and manage their coding objectives and challenges. Application Software is currently in progress</p>
+									<p>Messenger Web Application for Hackathons. Provides real-time chatting system, colloborative utilities, and toolkits that will allow "hackers" to team up and manage their coding objectives and challenges. Application Software is currently in progress</p>
 
-									<p>Technologies used: Node.js, Javascript, MySQL, HTML, CSS, Socket.io</p>
+									<p>Technologies used: Node.js, Javascript, MySQL, AWS, HTML, CSS, Socket.io</p>
 								</article>
 							</div>
 						</div>
