new resume update

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<li><a href="#top">Home</a></li>
 					<li><a href="#work">Experience</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a href="https://www.dropbox.com/s/890q35s8a7a75sb/William%20Thing%20Software%20Resume.docx?dl=0" target="_blank">Resume</a></li>
+					<li><a href="files/Resume.pdf" target="_blank">Resume</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -123,7 +123,7 @@
 						</div>
 					</div>
 					<footer>
-						<p>A more detailed list of my past experience can be found on my <a href="https://www.dropbox.com/s/890q35s8a7a75sb/William%20Thing%20Software%20Resume.docx?dl=0" target="_blank">resume</a> and <a href="https://www.linkedin.com/in/williamthing" target="_blank">Linkedin</a>.</p>
+						<p>A more detailed list of my past experience can be found on my <a href="files/Resume.pdf" target="_blank">resume</a> and <a href="https://www.linkedin.com/in/williamthing" target="_blank">Linkedin</a>.</p>
 						<a href="#portfolio" class="button big scrolly">See some of my recent work</a>
 					</footer>
 				</article>
