skills bar add in

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-desktop.css" />
 		</noscript>
+			<link rel="stylesheet" href="css/skillsbar.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
 	</head>
@@ -121,6 +122,25 @@
 							</div>
 						</div>
 					</div>
+
+				<br>
+				<br>
+				<p><b>My Programming Languages</b></p>
+				<div class="bars">
+
+				   <ul class="skills">
+					   <li><span class="bar-expand java"></span><em>Java</em></li>
+                  <li><span class="bar-expand python"></span><em>Python</em></li>
+						<li><span class="bar-expand c"></span><em>C</em></li>
+						<li><span class="bar-expand cpp"></span><em>C++</em></li>
+						<li><span class="bar-expand javascript"></span><em>JavaScript</em></li>
+						<li><span class="bar-expand html"></span><em>HTML</em></li>
+                  <li><span class="bar-expand css"></span><em>CSS</em></li>
+                  <li><span class="bar-expand sql"></span><em>SQL</em></li>
+					</ul>
+
+				</div><!-- end skill-bars -->
+
 					<footer>
 						<p>A more detailed list of my past experience can be found on my <a href="files/Resume.pdf" target="_blank">resume</a> and <a href="https://www.linkedin.com/in/williamthing" target="_blank">Linkedin</a>.</p>
 						<a href="#portfolio" class="button big scrolly">See some of my recent work</a>
