updating projects on website

--- a/index.html
+++ b/index.html
@@ -201,15 +201,15 @@
 							</div>
 							<div class="4u">
 								<article class="box style2">
-									<a href="https://github.com/williamthing/Projects/tree/master/Deck%20of%20Cards%20and%20Card%20Games" target="_blank"class="image featured">
+									<a href="https://github.com/williamthing/BST-AVL-Tree-Record-Filing-System" target="_blank"class="image featured">
 										<div class="cards">
 
-										<img src="images/cards01.jpg" alt="" />
+										<img src="images/record-keep.jpg" alt="" />
 
 										</div>
 									</a>
-									<h3><a href="https://github.com/williamthing/Projects/tree/master/Deck%20of%20Cards%20and%20Card%20Games" target="_blank">Card Games</a></h3>
-									<p>Play some of your favorite card games: traditional War, Blackjack, Poker, and Texas Hold'em!</p>
+									<h3><a href="https://github.com/williamthing/BST-AVL-Tree-Record-Filing-System" target="_blank">Record Filing System</a></h3>
+									<p>Keeps track of existing records and can load record files to be sorted and searched for.</p>
 									<p>Technologies used: Java</p>
 									<br><br>
 									<br><br>
